--- a/pistas.html
+++ b/pistas.html
@@ -156,6 +156,14 @@
 			  </div>
 			</div>
 		  </div>
+		  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#tribu4" aria-expanded="false" aria-controls="collapseExample">
+			Quinta pista
+		   </button>
+			<div class="collapse" id="tribu4">
+			  <div class="card text-white bg-info mb-1">
+				La última palabra está partida en dos, probaron leerla al revés? Trabajen juntos!
+			  </div>
+			</div>
 		  </div>
 		</div>
       </div>
@@ -389,7 +397,7 @@
 		   </button>
 			<div class="collapse" id="elencuentro2">
 			  <div class="card text-white bg-info mb-1">
-				¿Cómo ingresamos a la oficina? :)
+				¿Conocen ese lugar? OFICINA _ _ _ _ _ _ _
 			  </div>
 			</div>
 		  </div>
